# tftpd

./: .clang-format  .clang-tidy  .codacy.yml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: tests.yml
cmake/: EnableCoverage.cmake  EnableDocs.cmake
docs/: Doxyfile
include/tftp/: filesystem.hpp  tftp.hpp  tftp_server.hpp
include/tftp/detail/: argument_parser.hpp  endian.hpp  endianness.hpp  generator.hpp
include/tftp/detail/impl/: generator_impl.hpp
include/tftp/protocol/: tftp_protocol.hpp  tftp_session.hpp
src/: CMakeLists.txt  argument_parser.cpp  filesystem.cpp  main.cpp  tftp.cpp  tftp_server.cpp
tests/: CMakeLists.txt  test_ack_validation.cpp  test_argument_parser.cpp  test_data_validation.cpp  test_endian.cpp  test_endianness.cpp  test_filesystem.cpp  test_filesystem_env.cpp  test_generator.cpp  test_out_of_blue_rrq.cpp  test_out_of_blue_wrq.cpp  test_server_fixture.hpp  test_tftp.cpp  test_tftp_protocol.cpp  test_tftp_server.cpp  test_tftp_server_static.cpp
